<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_activity_main_search"
        android:icon="@drawable/ic_search_white"
        app:showAsAction="ifRoom"
        android:title="@string/search">
    </item>

    <item
        android:id="@+id/menu_activity_main_params"
        android:icon="@drawable/ic_more_vert_white"
        app:showAsAction="ifRoom"
        android:title="@string/parameters">
        <menu>
            <item
                android:id="@+id/menu_notification"
                android:title="@string/notification"/>
            <item
                android:id="@+id/menu_help"
                android:title="@string/help"/>
            <item
                android:id="@+id/menu_about"
                android:title="@string/about"/>
        </menu>
    </item>
</menu>